[gd_scene load_steps=6 format=2]

[ext_resource path="res://creatures/creatures.tscn" type="PackedScene" id=1]
[ext_resource path="res://art/temp/Enermy.png" type="Texture" id=2]
[ext_resource path="res://creatures/enermy/Enermy.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25, 25 )

[node name="Enermy" type="KinematicBody2D" groups=[
"enermy",
]]
z_index = 10
collision_layer = 4
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="CreatureStatus" parent="." instance=ExtResource( 1 )]

[node name="AttackColdTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="DisappearTimer" type="Timer" parent="."]

[connection signal="timeout" from="AttackColdTimer" to="." method="_on_AttackColdTimer_timeout"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_DisappearTimer_timeout"]
